--- a/aoc/2021-2.html
+++ b/aoc/2021-2.html
@@ -156,34 +156,96 @@
                     <main>
                         <h1 id="advent-of-code---year-2021-day-2"><a class="header" href="#advent-of-code---year-2021-day-2">Advent of code - Year 2021 Day 2</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2021/day/2">day 2</a>. Go back to year <a href="2021.html">2021</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h2 id="maincpp"><a class="header" href="#maincpp">main.cpp</a></h2>
-<pre><code class="language-cpp">#include&lt;iostream&gt;
-#include&lt;fstream&gt;
-#include&lt;string&gt;
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In the first part we simply calculate the depth and forward position. The parsing is done via <code>regex</code>.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>For the second part we use the provided calculation using aim.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
 
-int main(int argc, char * * argv){
-  std::ifstream stream;
-  stream.open("INPUT");
-  std::string line;
-  int depth = 0;
-  int forward = 0;
-  int aim = 0;
-  while(getline(stream, line)){
-    int now = std::stoi(line.substr(line.length()-2, line.length()-1));
-    if (line[0] == 'u'){
-      aim -= now;
-    }
-    else if (line[0] == 'f'){
-      forward += now;
-      depth += (aim*now);
-    }
-    else{
-      aim += now;
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+type Instruction struct {
+  instruction string
+  value       int
+}
+
+func read_file(file_path string) []Instruction {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("(forward|up|down) ([0-9])")
+  found := regex.FindAllStringSubmatch(string(content), -1)
+  instructions := make([]Instruction, len(found))
+  for i, f := range found {
+    nr, _ := strconv.Atoi(f[2])
+    instructions[i] = Instruction{f[1], nr}
+  }
+  return instructions
+}
+
+func compute(instructions []Instruction) int {
+  depth, forward := 0, 0
+  for _, instruction := range instructions {
+    switch instruction.instruction {
+    case "up":
+      depth -= instruction.value
+    case "down":
+      depth += instruction.value
+    case "forward":
+      forward += instruction.value
     }
   }
-  std::cout &lt;&lt; "Depth: " &lt;&lt; depth &lt;&lt; ", forward: " &lt;&lt; forward &lt;&lt; std::endl;
-  long mult = depth*forward;
-  std::cout &lt;&lt; mult &lt;&lt; std::endl; 
+  return depth * forward
+}
+
+func compute_aim(instructions []Instruction) int {
+  depth, forward, aim := 0, 0, 0
+  for _, instruction := range instructions {
+    switch instruction.instruction {
+    case "up":
+      aim -= instruction.value
+    case "down":
+      aim += instruction.value
+    case "forward":
+      forward += instruction.value
+      depth += aim * instruction.value
+    }
+  }
+  return depth * forward
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  instructions := read_file("INPUT")
+  result = compute(instructions)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  instructions := read_file("INPUT")
+  result = compute_aim(instructions)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 2 - Dive!")
+  part1()
+  part2()
 }
 </code></pre>
 
