--- a/aoc/2021-5.html
+++ b/aoc/2021-5.html
@@ -156,39 +156,123 @@
                     <main>
                         <h1 id="advent-of-code---year-2021-day-5"><a class="header" href="#advent-of-code---year-2021-day-5">Advent of code - Year 2021 Day 5</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2021/day/5">day 5</a>. Go back to year <a href="2021.html">2021</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h2 id="first-partpy"><a class="header" href="#first-partpy">first-part.py</a></h2>
-<pre><code class="language-py">#!/usr/bin/env python3
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In the first part we check if at least one coordinate is equal. If so add all midpoints by computing the difference.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we use pretty much the same approach only this time we will consider also diagonal cases. Which are found by having the same absolute values of difference.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
 
-with open("INPUT") as f:
-    array = []
-    for i in range(1000):
-        array.append([])
-        for j in range(1000):
-            array[i].append(0)
-    for line in f:
-        separate = line.split(" -&gt; ")
-        first = separate[0].split(",")
-        second = separate[1].split(",")
-        x1 = int(first[0])
-        y1 = int(first[1])
-        x2 = int(second[0])
-        y2 = int(second[1])
-        if x1 == x2:
-            if y1 &gt; y2:
-                y1, y2 = y2, y1
-            for i in range(y1, y2+1):
-                array[x1][i] += 1
-        elif y1 == y2:
-            if x1 &gt; x2:
-                x1, x2 = x2, x1
-            for i in range(x1, x2+1):
-                array[i][y1] += 1
-    sum = 0
-    for line in array:
-        for box in line:
-            if box &gt;= 2:
-                sum += 1
-    print(sum)
+import (
+  "fmt"
+  "log"
+  "math"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+type Line struct {
+  start [2]int
+  end   [2]int
+}
+
+func read_file(file_path string) []Line {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("([0-9]+),([0-9]+) -&gt; ([0-9]+),([0-9]+)")
+  found := regex.FindAllStringSubmatch(string(content), -1)
+  var lines []Line
+  for _, f := range found {
+    start_x, _ := strconv.Atoi(f[1])
+    start_y, _ := strconv.Atoi(f[2])
+    end_x, _ := strconv.Atoi(f[3])
+    end_y, _ := strconv.Atoi(f[4])
+    lines = append(lines, Line{[2]int{start_x, start_y}, [2]int{end_x, end_y}})
+  }
+  return lines
+}
+
+func add_to_map(number_of_lines *map[[2]int]int, pos [2]int) {
+  _, ok := (*number_of_lines)[pos]
+  if ok {
+    (*number_of_lines)[pos] += 1
+  } else {
+    (*number_of_lines)[pos] = 1
+  }
+}
+
+func midpoints(number_of_lines *map[[2]int]int, line Line) {
+  diff := [2]int{line.start[0] - line.end[0], line.start[1] - line.end[1]}
+  if diff[0] == 0 {
+    incr := diff[1] / int(math.Abs(float64(diff[1])))
+    for x := line.end[1]; x != line.start[1]; x += incr {
+      add_to_map(number_of_lines, [2]int{line.start[0], x})
+    }
+    add_to_map(number_of_lines, line.start)
+  } else if diff[1] == 0 {
+    incr := diff[0] / int(math.Abs(float64(diff[0])))
+    for x := line.end[0]; x != line.start[0]; x += incr {
+      add_to_map(number_of_lines, [2]int{x, line.start[1]})
+    }
+    add_to_map(number_of_lines, line.start)
+  } else if int(math.Abs(float64(diff[1]))) == int(math.Abs(float64(diff[0]))) {
+    incr := [2]int{diff[0] / int(math.Abs(float64(diff[0]))), diff[1] / int(math.Abs(float64(diff[1])))}
+    y := line.end[1]
+    for x := line.end[0]; x != line.start[0]; x += incr[0] {
+      add_to_map(number_of_lines, [2]int{x, y})
+      y += incr[1]
+    }
+    add_to_map(number_of_lines, line.start)
+
+  }
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  number_of_lines := make(map[[2]int]int)
+  lines := read_file("INPUT")
+  for _, line := range lines {
+    if line.start[0] == line.end[0] || line.start[1] == line.end[1] {
+      midpoints(&amp;number_of_lines, line)
+    }
+  }
+  for _, ele := range number_of_lines {
+    if ele &gt;= 2 {
+      result += 1
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  number_of_lines := make(map[[2]int]int)
+  lines := read_file("INPUT")
+  for _, line := range lines {
+    midpoints(&amp;number_of_lines, line)
+  }
+  for _, ele := range number_of_lines {
+    if ele &gt;= 2 {
+      result += 1
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 5 - Hydrothermal Venture")
+  part1()
+  part2()
+}
 </code></pre>
 
                     </main>
