--- a/aoc/2021-6.html
+++ b/aoc/2021-6.html
@@ -156,23 +156,77 @@
                     <main>
                         <h1 id="advent-of-code---year-2021-day-6"><a class="header" href="#advent-of-code---year-2021-day-6">Advent of code - Year 2021 Day 6</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2021/day/6">day 6</a>. Go back to year <a href="2021.html">2021</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h2 id="first-partpy"><a class="header" href="#first-partpy">first-part.py</a></h2>
-<pre><code class="language-py">#!/usr/bin/env python3
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>We setup an array of lanternfish based on their days until new reproduction cycle starts. Then we add the number of lanternfish which will reproduce to the end and also to the reset index. We will run this for <code>80</code> days.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>We use the same simulation, only run it for <code>256</code> days.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
 
-with open("INPUT") as f:
-    line = f.readline()
-    splitted = line.split(',')
-    integers = []
-    for box in splitted:
-        integers.append(int(box))
-    for i in range(80):
-        for i in range(len(integers)):
-            integers[i] -= 1
-            if integers[i] == -1:
-                integers[i] = 6
-                integers.append(8)
-    sum = len(integers)
-    print(sum)
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+func read_file(file_path string) [9]int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("[0-9]+")
+  found := regex.FindAllString(string(content), -1)
+  var lanternfish [9]int
+  for _, f := range found {
+    index, _ := strconv.Atoi(f)
+    lanternfish[index] += 1
+  }
+  return lanternfish
+}
+
+func simulate_life(lanternfish [9]int, days int) int {
+  for i := 0; i &lt; days; i++ {
+    first := lanternfish[0]
+    for j := 1; j &lt; len(lanternfish); j++ {
+      lanternfish[j-1] =lanternfish[j]
+    }
+    lanternfish[8] = first
+    lanternfish[6] += first
+  }
+  sum := 0
+  for i := 0; i &lt; len(lanternfish); i++ {
+    sum += lanternfish[i]
+  }
+  return sum
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  lanternfish := read_file("INPUT")
+  result = simulate_life(lanternfish, 80)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  lanternfish := read_file("INPUT")
+  result = simulate_life(lanternfish, 256)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 6 - Lanternfish")
+  part1()
+  part2()
+}
 </code></pre>
 
                     </main>
