--- a/aoc/2021-7.html
+++ b/aoc/2021-7.html
@@ -156,25 +156,83 @@
                     <main>
                         <h1 id="advent-of-code---year-2021-day-7"><a class="header" href="#advent-of-code---year-2021-day-7">Advent of code - Year 2021 Day 7</a></h1>
 <p>This is a solution of the <a href="https://adventofcode.com/2021/day/7">day 7</a>. Go back to year <a href="2021.html">2021</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h2 id="first-partpy"><a class="header" href="#first-partpy">first-part.py</a></h2>
-<pre><code class="language-py">#!/usr/bin/env python3
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In both cases we try all possibilities and find the optimum.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we only need to rewrite the operator for computing the distance.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
 
-with open("input.txt") as f:
-    line = f.readline()
-    separated = line.split(",")
-    integers = []
-    for box in separated:
-        integers.append(int(box))
-    integers.sort()
-    middle = integers[len(integers)//2]
-    print(middle)
-    sum = 0
-    for sub in integers:
-        if sub &lt;= middle:
-            sum += (middle - sub)
-        else:
-            sum += (sub - middle)
-    print(sum)
+import (
+  "fmt"
+  "log"
+  "math"
+  "os"
+  "regexp"
+  "sort"
+  "strconv"
+  "time"
+)
+
+func read_file(file_path string) []int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  regex := regexp.MustCompile("[0-9]+")
+  found := regex.FindAllString(string(content), -1)
+  var horizontal_positions []int
+  for _, f := range found {
+    nr, _ := strconv.Atoi(f)
+    horizontal_positions = append(horizontal_positions, nr)
+  }
+  return horizontal_positions
+}
+
+func optimize_distance(numbers []int, op func(int, int) int) int {
+  sort.Ints(numbers)
+  result := op(numbers[0], numbers[len(numbers)-1]) * len(numbers)
+  for x := numbers[0]; x &lt; numbers[len(numbers)-1]; x++ {
+    sum := 0
+    for _, pos := range numbers {
+      sum += op(x, pos)
+    }
+    if sum &lt; result {
+      result = sum
+    }
+  }
+  return result
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  horizontal_positions := read_file("INPUT")
+  dist := func(x, y int) int { return int(math.Abs(float64(x - y))) }
+  result = optimize_distance(horizontal_positions, dist)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  horizontal_positions := read_file("INPUT")
+  scaled_dist := func(x, y int) int {
+    diff := int(math.Abs(float64(x - y)))
+    return (diff * (diff + 1)) / 2
+  }
+  result = optimize_distance(horizontal_positions, scaled_dist)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2021 day 7 - The Treachery of Whales")
+  part1()
+  part2()
+}
 </code></pre>
 
                     </main>
