deploy: a28e498cea3d30b65f9b1dbaeb5c6606fcd7b945

--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -170,6 +170,7 @@
 <li><a href="2024-6.html">Day 6</a></li>
 <li><a href="2024-7.html">Day 7</a></li>
 <li><a href="2024-8.html">Day 8</a></li>
+<li><a href="2024-9.html">Day 9</a></li>
 </ul>
 
                     </main>
