--- a/aoc/2024-9.html
+++ b/aoc/2024-9.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 - Personal page</title>
+        <title>Year 2024 day 9 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,46 +154,200 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023"><a class="header" href="#advent-of-code---year-2023">Advent of code - Year 2023</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-10.html">Day 10</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-20.html">Day 20</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
-<li><a href="2023-25.html">Day 25</a></li>
-</ul>
+                        <h1 id="advent-of-code---year-2024-day-9"><a class="header" href="#advent-of-code---year-2024-day-9">Advent of code - Year 2024 Day 9</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/9">day 9</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>Today I used two different approaches for each part. In the first part I recreated the disc and by following two indices (going forward and backward) I swap spaces and files between each other. Lastly I compute the sum.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>For the second part I created a structure that holds the content of the place, its size and possibly index of a file. Then I also go backwards and forward at the same time and if I find a file I will try to find a big enough space and then put it there. Afterwards I partition the space if there is some left and compact consecutive spaces to just one.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strconv"
+  "strings"
+  "time"
+)
+
+const (
+  SPACE   = 0
+  FILE    = 1
+  INVALID = -1
+)
+
+type Partition struct {
+  content int
+  size    int
+  index   int
+}
+
+func read_file(file_path string) []int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  var format []int
+  line := strings.Split(string(content), "\n")[0]
+  for i := 0; i &lt; len(line); i++ {
+    nr, _ := strconv.Atoi(string(line[i]))
+    format = append(format, nr)
+  }
+  return format
+}
+
+func init_array(size, val int) []int {
+  array := make([]int, size)
+  for i := range array {
+    array[i] = val
+  }
+  return array
+}
+
+func recreate_disk(format []int) []int {
+  var disk []int
+  id := 0
+  for i := 0; i &lt; len(format); i++ {
+    if i%2 == 0 {
+      partition := init_array(format[i], id)
+      id++
+      disk = append(disk, partition[:]...)
+    } else {
+      partition := init_array(format[i], INVALID)
+      disk = append(disk, partition[:]...)
+    }
+  }
+  return disk
+}
+
+func create_my_format(format []int) []Partition {
+  var prop_format []Partition
+  index := 0
+  for i := 0; i &lt; len(format); i++ {
+    if i%2 == 0 {
+      prop_format = append(prop_format, Partition{FILE, format[i], index})
+      index++
+    } else {
+      prop_format = append(prop_format, Partition{SPACE, format[i], INVALID})
+    }
+  }
+  return prop_format
+}
+
+func shrink(disk *[]int) {
+  a, i := 0, len(*disk)-1
+  for a &lt; i {
+    if (*disk)[a] == INVALID &amp;&amp; (*disk)[i] != INVALID {
+      (*disk)[a] = (*disk)[i]
+      (*disk)[i] = INVALID
+      a++
+      i--
+    } else if (*disk)[a] != INVALID {
+      a++
+    } else if (*disk)[i] == INVALID {
+      i--
+    }
+  }
+}
+
+func compact(format *[]Partition) {
+  for i := 1; i &lt; len(*format); i++ {
+    if (*format)[i-1].content == SPACE &amp;&amp; (*format)[i].content == SPACE {
+      (*format)[i-1].size += (*format)[i].size
+      *format = append((*format)[:i], (*format)[i+1:]...)
+      i--
+    }
+  }
+}
+
+func insert(format *[]Partition, index int, part Partition) {
+  new_format := make([]Partition, len(*format)+1)
+  for j := 0; j &lt; index+1; j++ {
+    new_format[j] = (*format)[j]
+  }
+  new_format[index+1] = part
+  for j := index + 2; j &lt; len(new_format); j++ {
+    new_format[j] = (*format)[j-1]
+  }
+  *format = new_format
+}
+
+func reallocate_file(file_index int, format *[]Partition) {
+  for a := 0; a &lt; file_index; a++ {
+    rest := (*format)[a].size - (*format)[file_index].size
+    if (*format)[a].content == SPACE &amp;&amp; rest &gt;= 0 {
+      (*format)[a].content = FILE
+      (*format)[a].size = (*format)[file_index].size
+      (*format)[a].index = (*format)[file_index].index
+      (*format)[file_index].content = SPACE
+      if rest &gt; 0 {
+        insert(format, a, Partition{SPACE, rest, -1})
+        compact(format)
+      }
+      return
+    }
+  }
+}
+
+func reallocate(format *[]Partition) {
+  for i := len(*format) - 1; i &gt;= 0; i-- {
+    if (*format)[i].content == FILE {
+      reallocate_file(i, format)
+    }
+  }
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  disk := recreate_disk(read_file("INPUT"))
+  shrink(&amp;disk)
+  for i, el := range disk {
+    if el != INVALID {
+      result += i * el
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  format := create_my_format(read_file("INPUT"))
+  reallocate(&amp;format)
+  position := 0
+  for i := 0; i &lt; len(format); i++ {
+    for j := 0; j &lt; format[i].size; j++ {
+      if format[i].content == FILE {
+        result += format[i].index * position
+      }
+      position++
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 9 - Disk Fragmenter")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-9.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-8.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,11 +357,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-9.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-8.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
