deploy: 0c7e0fd7a87fd89f19d7586fb4c3c684113ea3de

--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -172,6 +172,7 @@
 <li><a href="2024-9.html">Day 9</a></li>
 <li><a href="2024-10.html">Day 10</a></li>
 <li><a href="2024-11.html">Day 11</a></li>
+<li><a href="2024-12.html">Day 12</a></li>
 </ul>
 
                     </main>
