--- a/aoc/2024-12.html
+++ b/aoc/2024-12.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 - Personal page</title>
+        <title>Year 2024 day 12 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,46 +154,203 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023"><a class="header" href="#advent-of-code---year-2023">Advent of code - Year 2023</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-10.html">Day 10</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-20.html">Day 20</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
-<li><a href="2023-25.html">Day 25</a></li>
-</ul>
+                        <h1 id="advent-of-code---year-2024-day-12"><a class="header" href="#advent-of-code---year-2024-day-12">Advent of code - Year 2024 Day 12</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/12">day 12</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>We will firstly use bucket fill algorithm to find the inner tiles and also the fences with their positions, orientations and sides. After that in the first part we multiple the number of fences with the number of fences.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we compare the fences between each other if they are in the same side or not. That is we check the same type values and sort them, after that we will proceed, if the difference is greater than 1 then it is a different side, also always add one for the whole side.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "math"
+  "os"
+  "sort"
+  "strings"
+  "time"
+)
+
+const (
+  HORIZONTAL = 0
+  VERTICAL = 1
+  UP = 2
+  DOWN = 3
+)
+
+type Fence struct {
+  position [2]int
+  orientation int
+  side int
+}
+
+func read_file(file_path string) [][]string {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  var m [][]string
+  lines := strings.Split(string(content), "\n")
+  for _, line := range lines {
+    if len(line) == 0 {
+      continue
+    }
+    chars := strings.Split(line, "")
+    m = append(m, chars)
+
+  }
+  return m
+}
+
+func check_similarity(considered *map[[2]int]bool, array *[]int, current, fence Fence, index, orientation int) {
+  _, ok := (*considered)[[2]int{current.position[index], current.side}]
+  if current.position[index] == fence.position[index] &amp;&amp; !ok &amp;&amp; current.orientation == orientation &amp;&amp; fence.orientation == orientation &amp;&amp; current.side == fence.side {
+    *array = append(*array, fence.position[(index + 1) % 2])
+  }
+}
+
+func count_sides(array []int) int {
+  sum := 0
+  sort.Ints(array)
+  for j := 1; j &lt; len(array); j++ {
+    if int(math.Abs(float64(array[j - 1] - array[j]))) &gt; 1 {
+      sum += 1
+    }
+  }
+  if len(array) &gt; 0 {
+    sum += 1
+  }
+  return sum
+}
+
+func filter_count(fences map[Fence]bool) int {
+  considered_vertical := make(map[[2]int]bool)
+  considered_horizontal := make(map[[2]int]bool)
+  sum := 0
+  for current := range fences {
+    vertical := make([]int, 0)
+    horizontal := make([]int, 0)
+    for fence := range fences {
+      check_similarity(&amp;considered_vertical, &amp;vertical, current, fence, 0, VERTICAL)
+      check_similarity(&amp;considered_horizontal, &amp;horizontal, current, fence, 1, HORIZONTAL)
+    }
+    if current.orientation == VERTICAL {
+      considered_vertical[[2]int{current.position[0], current.side}] = true
+    } else {
+      considered_horizontal[[2]int{current.position[1], current.side}] = true
+    }
+    sum += count_sides(horizontal) + count_sides(vertical)
+  }
+  return sum
+}
+
+func insert_fence(fences *map[Fence]bool, current, neigh [2]int) {
+  if  neigh[0] == current[0] {
+    if neigh[1] &lt; current[1] {
+      (*fences)[Fence{position: neigh, orientation: HORIZONTAL, side: UP}] = true
+    } else {
+      (*fences)[Fence{position: neigh, orientation: HORIZONTAL, side: DOWN}] = true
+    }
+  } else {
+    if neigh[0] &lt; current[0] {
+      (*fences)[Fence{position: neigh, orientation: VERTICAL, side: UP}] = true
+    } else {
+      (*fences)[Fence{position: neigh, orientation: VERTICAL, side: DOWN}] = true
+    }
+  }
+}
+
+func bucket(garden *[][]string, visited_map *map[[2]int]bool, i, j int) (map[Fence]bool, map[[2]int]bool) {
+  var queue [][2]int
+  queue = append(queue, [2]int{i,j})
+  fences := make(map[Fence]bool)
+  inner := make(map[[2]int]bool)
+
+  for len(queue) &gt; 0 {
+    current := queue[0]
+    inner[current] = true
+    queue = queue[1:]
+    neighbours := [4][2]int {
+      {current[0] - 1, current[1]},
+      {current[0] + 1, current[1]},
+      {current[0], current[1] + 1},
+      {current[0], current[1] - 1},
+    }
+    for _, neigh := range neighbours {
+      _, visited := inner[neigh]
+      if visited {
+        continue
+      }
+      if neigh[0] &lt; 0 || neigh[1] &lt; 0 || neigh[0] &gt;= len(*garden) || neigh[1] &gt;= len((*garden)[0]) {
+        insert_fence(&amp;fences, current, neigh)
+        continue
+      }
+      if (*garden)[neigh[0]][neigh[1]] != (*garden)[i][j] {
+        insert_fence(&amp;fences, current, neigh)
+        continue
+      }
+      queue = append(queue, neigh)
+      inner[neigh] = true
+      (*visited_map)[neigh] = true
+    }
+  }
+  return fences, inner
+}
+
+func count_fence(garden *[][]string, f func(map[Fence]bool) int) int {
+  sum := 0
+  visited := make(map[[2]int]bool)
+  for i, row := range *garden {
+    for j := range row {
+      _, ok := visited[[2]int{i,j}]
+      if ok {
+        continue
+      }
+      fences, inner := bucket(garden, &amp;visited, i, j)
+      sum += len(inner) * f(fences)
+    }
+  }
+  return sum
+}
+
+func part1() {
+  var result int
+  start := time.Now()
+  garden := read_file("INPUT")
+  my_len := func(m map[Fence]bool) int { return len(m); }
+  result = count_fence(&amp;garden, my_len)
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part2() {
+  var result int
+  start := time.Now()
+  garden := read_file("INPUT")
+  result = count_fence(&amp;garden, filter_count)
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 12 - Garden Groups")
+  part1()
+  part2()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-12.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-11.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,11 +360,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-12.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-11.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
