--- a/aoc/2021-10.html
+++ b/aoc/2021-10.html
@@ -227,7 +227,7 @@ func filter_or_fill(line string) (int, int) {
   return 0, sum
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   lines := read_file("INPUT")
@@ -239,7 +239,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   lines := read_file("INPUT")
@@ -258,8 +258,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 10 - Syntax Scoring")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
