--- a/aoc/2021-3.html
+++ b/aoc/2021-3.html
@@ -244,7 +244,7 @@ func co2(lines []string) int {
   return filter(lines, rule)
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   lines := read_file("INPUT")
@@ -253,7 +253,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   result = oxygen(read_file("INPUT")) * co2(read_file("INPUT"))
@@ -263,8 +263,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 3 - Binary Diagnostic")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
