--- a/aoc/2021-4.html
+++ b/aoc/2021-4.html
@@ -266,7 +266,7 @@ func draw_number(bingos []Bingo, number int) (int, int, bool) {
   return 0, -1, false
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   numbers, bingos := read_file("INPUT")
@@ -281,7 +281,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   numbers, bingos := read_file("INPUT")
@@ -299,8 +299,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 4 - Giant Squid")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
