--- a/aoc/2021-7.html
+++ b/aoc/2021-7.html
@@ -205,7 +205,7 @@ func optimize_distance(numbers []int, op func(int, int) int) int {
   return result
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   horizontal_positions := read_file("INPUT")
@@ -215,7 +215,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   horizontal_positions := read_file("INPUT")
@@ -230,8 +230,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 7 - The Treachery of Whales")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
