--- a/aoc/2024-10.html
+++ b/aoc/2024-10.html
@@ -239,7 +239,7 @@ func find_distinct(m *[][]int, x, y int) int {
   return res
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   m := read_file("INPUT")
@@ -254,7 +254,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   m := read_file("INPUT")
@@ -271,8 +271,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 10 - Hoof It")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
