--- a/aoc/2024-2.html
+++ b/aoc/2024-2.html
@@ -237,7 +237,7 @@ func increasing_or_decreasing(tolerate bool, level *[]int) bool {
   return incr || decr
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   levels := read_file("INPUT")
@@ -250,7 +250,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   levels := read_file("INPUT")
@@ -266,8 +266,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 2 - Red-Nosed Reports")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
