--- a/aoc/2024-4.html
+++ b/aoc/2024-4.html
@@ -269,7 +269,7 @@ func count_x_mas(table [][]string) int {
   return res
 }
 
-func part1() {
+func part_one() {
   var result int
   var content = read_file("INPUT")
   start := time.Now()
@@ -289,7 +289,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   var content = read_file("INPUT")
   start := time.Now()
@@ -301,8 +301,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 4 - Ceres Search")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
