--- a/aoc/2024-9.html
+++ b/aoc/2024-9.html
@@ -300,7 +300,7 @@ func reallocate(format *[]Partition) {
   }
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   disk := recreate_disk(read_file("INPUT"))
@@ -314,7 +314,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   format := create_my_format(read_file("INPUT"))
@@ -334,8 +334,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 9 - Disk Fragmenter")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
