--- a/aoc/2021-1.html
+++ b/aoc/2021-1.html
@@ -202,7 +202,7 @@ func slide(start []int) func(int) bool {
   }
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   array := read_file("INPUT")
@@ -216,7 +216,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   array := read_file("INPUT")
@@ -232,8 +232,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 1 - Sonar Sweep")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
