--- a/aoc/2021-2.html
+++ b/aoc/2021-2.html
@@ -224,7 +224,7 @@ func compute_aim(instructions []Instruction) int {
   return depth * forward
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   instructions := read_file("INPUT")
@@ -233,7 +233,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   instructions := read_file("INPUT")
@@ -244,8 +244,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 2 - Dive!")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
