--- a/aoc/2021-5.html
+++ b/aoc/2021-5.html
@@ -232,7 +232,7 @@ func midpoints(number_of_lines *map[[2]int]int, line Line) {
   }
 }
 
-func part1() {
+func part_one() {
   var result int
   start := time.Now()
   number_of_lines := make(map[[2]int]int)
@@ -251,7 +251,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   start := time.Now()
   number_of_lines := make(map[[2]int]int)
@@ -270,8 +270,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2021 day 5 - Hydrothermal Venture")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
