--- a/aoc/2024-5.html
+++ b/aoc/2024-5.html
@@ -277,7 +277,7 @@ func fix(rules map[int][]int, order []int) []int {
   return order
 }
 
-func part1() {
+func part_one() {
   var result int
   rules, orders := read_file("INPUT")
   start := time.Now()
@@ -289,7 +289,7 @@ func part1() {
   fmt.Println("Part 1 [", end.Sub(start), "]:", result)
 }
 
-func part2() {
+func part_two() {
   var result int
   rules, orders := read_file("INPUT")
   start := time.Now()
@@ -303,8 +303,8 @@ func part2() {
 
 func main() {
   fmt.Println("Year 2024 day 5 - Print Queue")
-  part1()
-  part2()
+  part_one()
+  part_two()
 }
 </code></pre>
 
