deploy: 27b01ea81dd90363166d163167c21738c65f3aea

--- a/aoc/2024-13.html
+++ b/aoc/2024-13.html
@@ -170,7 +170,7 @@ a_1 x + b_1 y = p_1
 y = \frac{p_1 a_0 - a_1 p_0}{b_1 a_0 - a_1 b_0}
 \]</p>
 <p>\[
-x = \frac{p_0 - b_0 x}{a_0}
+x = \frac{p_0 - b_0 y}{a_0}
 \]</p>
 <p>Lastly we check if it is indeed true.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
