deploy: 52968a7da16a22d6a14256a1d08d0131eed30e40

--- a/aoc/2024-13.html
+++ b/aoc/2024-13.html
@@ -261,7 +261,7 @@ func part_one() {
 func part_two() {
   var result int
   start := time.Now()
-  result = solve_all(read_file("INPUT"), 10_000_000_000_000)
+  result = solve_all(read_file("INPUT"), 10000000000000)
   end := time.Now()
   fmt.Println("Part 2 [", end.Sub(start), "]:", result)
 }
