deploy: 30943a191536bc8d3a3e73604b463be76aea370c

--- a/boot.html
+++ b/boot.html
@@ -183,6 +183,9 @@ alias rustinstall="curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | s
 
 # Update and install Scala lang.
 alias scalainstall="curl -fL https://github.com/coursier/coursier/releases/latest/download/cs-x86_64-pc-linux.gz | gzip -d &gt; cs &amp;&amp; chmod +x cs &amp;&amp; ./cs setup"
+
+# Update and install bun.
+alias buninstall="curl -fsSL https://bun.sh/install | bash"
 </code></pre>
 <h1 id="instalation-of-all-apps"><a class="header" href="#instalation-of-all-apps">Instalation of all apps</a></h1>
 <pre><code class="language-bash">apt update
