--- a/aoc/2024-10.html
+++ b/aoc/2024-10.html
@@ -173,6 +173,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 func read_file(file_path string) [][]int {
   content, err := os.ReadFile(file_path)
   if err != nil {
@@ -251,7 +262,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -266,11 +277,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 10 - Hoof It")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "10 - Hoof It" + Reset)
   part_one()
   part_two()
 }
