--- a/aoc/2024-12.html
+++ b/aoc/2024-12.html
@@ -175,6 +175,17 @@ import (
 )
 
 const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
+const (
   UPPER = 0
   LOWER = 2
   LEFT  = 1
@@ -308,7 +319,7 @@ func part_one() {
   my_len := func(m map[Fence]bool) int { return len(m) }
   result = count_fences(&amp;garden, my_len)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -317,11 +328,11 @@ func part_two() {
   garden := read_file("INPUT")
   result = count_fences(&amp;garden, count_sides)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 12 - Garden Groups")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "12 - Garden Groups" + Reset)
   part_one()
   part_two()
 }
