--- a/aoc/2024-14.html
+++ b/aoc/2024-14.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 day 13 - Personal page</title>
+        <title>Year 2024 day 14 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,27 +154,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024-day-13"><a class="header" href="#advent-of-code---year-2024-day-13">Advent of code - Year 2024 Day 13</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2024/day/13">day 13</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-14"><a class="header" href="#advent-of-code---year-2024-day-14">Advent of code - Year 2024 Day 14</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/14">day 14</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>We actually have the following system of equalities.</p>
-<p>\[
-a_0 x + b_0 y  = p_0
-\]</p>
-<p>\[
-a_1 x + b_1 y = p_1
-\]</p>
-<p>Which can be simplified to evaluate the following:</p>
-<p>\[
-y = \frac{p_1 a_0 - a_1 p_0}{b_1 a_0 - a_1 b_0}
-\]</p>
-<p>\[
-x = \frac{p_0 - b_0 y}{a_0}
-\]</p>
-<p>Lastly we check if it is indeed true. Note that we assume that the vectors are linearly independent.</p>
+<p>Note that we can jump the whole <code>100</code> steps by <code>modulo</code> algebra. And then we split into 4 cases of different quadrants. Then multiply these quadrants.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>In the second part we use the same fact.</p>
+<p>In this part we proceed one step at a time by simply checking if there is a long enough line of robots.</p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
@@ -184,7 +170,6 @@ import (
   "os"
   "regexp"
   "strconv"
-  "sync"
   "time"
 )
 
@@ -199,70 +184,85 @@ func print_result(dur time.Duration, part, result int) {
   fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
 }
 
-type Machine struct {
-  a     [2]int
-  b     [2]int
-  prize [2]int
+const (
+  Width  = 101
+  Height = 103
+)
+
+type Robot struct {
+  position [2]int
+  velocity [2]int
 }
 
-func read_file(file_path string) []Machine {
+func mod(nr, mod int) int {
+  return (nr%mod + mod) % mod
+}
+
+func (r *Robot) move(iter int) {
+  r.position[0] += r.velocity[0] * iter
+  r.position[1] += r.velocity[1] * iter
+  r.position[0] = mod(r.position[0], Width)
+  r.position[1] = mod(r.position[1], Height)
+}
+
+func read_file(file_path string) []Robot {
   content, err := os.ReadFile(file_path)
   if err != nil {
     log.Fatal(err)
   }
-  var machines []Machine
-  regex := regexp.MustCompile("Button A: X\\+([0-9]+), Y\\+([0-9]+)\\nButton B: X\\+([0-9]+), Y\\+([0-9]+)\\nPrize: X=([0-9]+), Y=([0-9]+)")
+  var robots []Robot
+  regex := regexp.MustCompile("p=([\\-0-9]+),([\\-0-9]+) v=([\\-0-9]+),([\\-0-9]+)")
   found := regex.FindAllStringSubmatch(string(content), -1)
   for _, f := range found {
-    a_x, _ := strconv.Atoi(f[1])
-    a_y, _ := strconv.Atoi(f[2])
-    b_x, _ := strconv.Atoi(f[3])
-    b_y, _ := strconv.Atoi(f[4])
-    prize_x, _ := strconv.Atoi(f[5])
-    prize_y, _ := strconv.Atoi(f[6])
-    machine := Machine{
-      a:     [2]int{a_x, a_y},
-      b:     [2]int{b_x, b_y},
-      prize: [2]int{prize_x, prize_y},
+    p_x, _ := strconv.Atoi(f[1])
+    p_y, _ := strconv.Atoi(f[2])
+    v_x, _ := strconv.Atoi(f[3])
+    v_y, _ := strconv.Atoi(f[4])
+    robot := Robot{
+      position: [2]int{p_x, p_y},
+      velocity: [2]int{v_x, v_y},
     }
-    machines = append(machines, machine)
+    robots = append(robots, robot)
   }
-  return machines
+  return robots
 }
 
-func solve(machine Machine, c chan int) {
-  y := (machine.prize[1]*machine.a[0] - machine.a[1]*machine.prize[0]) / (machine.b[1]*machine.a[0] - machine.a[1]*machine.b[0])
-  x := (machine.prize[0] - (machine.b[0] * y)) / machine.a[0]
-  if x*machine.a[0]+y*machine.b[0] == machine.prize[0] &amp;&amp; x*machine.a[1]+y*machine.b[1] == machine.prize[1] {
-    c &lt;- x*3 + y
+func is_tree(bitmap [Width][Height]bool) bool {
+  for i := 0; i &lt; Height; i++ {
+    for j := 0; j &lt; Width; j++ {
+      k := j
+      for ; k &lt; Width &amp;&amp; bitmap[k][i]; k++ {
+      }
+      if k-j &gt; 30 {
+        return true
+      }
+    }
   }
-}
-
-func solve_all(machines []Machine, addition int) int {
-  sum := 0
-  c := make(chan int, len(machines))
-  var wg sync.WaitGroup
-  wg.Add(len(machines))
-  for _, machine := range machines {
-    machine.prize[0] += addition
-    machine.prize[1] += addition
-    go func(machine Machine) {
-      defer wg.Done()
-      solve(machine, c)
-    }(machine)
-  }
-  wg.Wait()
-  close(c)
-  for opt := range c{
-    sum += opt
-  }
-  return sum
+  return false
 }
 
 func part_one() {
   var result int
   start := time.Now()
-  result = solve_all(read_file("INPUT"), 0)
+  robots := read_file("INPUT")
+  var quadrants [4]int
+  for i := range robots {
+    robots[i].move(100)
+    if robots[i].position[0] &lt; Width/2 {
+      if robots[i].position[1] &lt; Height/2 {
+        quadrants[0] += 1
+      } else if robots[i].position[1] &gt; Height/2 {
+        quadrants[1] += 1
+      }
+    } else if robots[i].position[0] &gt; Width/2 {
+      if robots[i].position[1] &lt; Height/2 {
+        quadrants[2] += 1
+      } else if robots[i].position[1] &gt; Height/2 {
+        quadrants[3] += 1
+      }
+    }
+  }
+  result = quadrants[0] * quadrants[1] * quadrants[2] * quadrants[3]
   end := time.Now()
   print_result(end.Sub(start), 1, result)
 }
@@ -270,13 +270,24 @@ func part_one() {
 func part_two() {
   var result int
   start := time.Now()
-  result = solve_all(read_file("INPUT"), 10000000000000)
+  robots := read_file("INPUT")
+  for t := 1; ; t++ {
+    var bitmap [Width][Height]bool
+    for i := range robots {
+      robots[i].move(1)
+      bitmap[robots[i].position[0]][robots[i].position[1]] = true
+    }
+    if is_tree(bitmap) {
+      result = t
+      break
+    }
+  }
   end := time.Now()
   print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "13 - Claw Contraption" + Reset)
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "14 - Restroom Redoubt" + Reset)
   part_one()
   part_two()
 }
@@ -286,11 +297,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-12.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-13.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-14.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -300,11 +311,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-12.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-13.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-14.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
