--- a/aoc/2024-6.html
+++ b/aoc/2024-6.html
@@ -172,6 +172,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 type Map [][]bool
 type Position [2]int
 
@@ -264,7 +275,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -291,11 +302,11 @@ func part_two() {
   }
   close(c)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 6 - Guard Gallivant")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "6 - Guard Gallivant" + Reset)
   part_one()
   part_two()
 }
