--- a/aoc/2024-9.html
+++ b/aoc/2024-9.html
@@ -174,6 +174,17 @@ import (
 )
 
 const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
+const (
   SPACE   = 0
   FILE    = 1
   INVALID = -1
@@ -311,7 +322,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -329,11 +340,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2024 day 9 - Disk Fragmenter")
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "9 - Disk Fragmenter" + Reset)
   part_one()
   part_two()
 }
