deploy: d7fa3ae466b060771abe662a4cb91b9b51218769

--- a/aoc/2021-2.html
+++ b/aoc/2021-2.html
@@ -173,6 +173,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 type Instruction struct {
   instruction string
   value       int
@@ -230,7 +241,7 @@ func part_one() {
   instructions := read_file("INPUT")
   result = compute(instructions)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -239,11 +250,11 @@ func part_two() {
   instructions := read_file("INPUT")
   result = compute_aim(instructions)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 2 - Dive!")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "2 - Dive!" + Reset)
   part_one()
   part_two()
 }
