--- a/aoc/2021-4.html
+++ b/aoc/2021-4.html
@@ -173,6 +173,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 type Box struct {
   value int
   mark  bool
@@ -278,7 +289,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -294,11 +305,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 4 - Giant Squid")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "4 - Giant Squid" + Reset)
   part_one()
   part_two()
 }
