--- a/print.html
+++ b/print.html
@@ -7078,6 +7078,17 @@ import (
   "time"
 )
 
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
 func read_file(file_path string) []int {
   content, err := os.ReadFile(file_path)
   if err != nil {
@@ -7118,7 +7129,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7132,11 +7143,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 1 - Sonar Sweep")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "1 - Sonar Sweep" + Reset)
   part_one()
   part_two()
 }
@@ -7159,6 +7170,17 @@ import (
   "strconv"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 type Instruction struct {
   instruction string
@@ -7217,7 +7239,7 @@ func part_one() {
   instructions := read_file("INPUT")
   result = compute(instructions)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7226,11 +7248,11 @@ func part_two() {
   instructions := read_file("INPUT")
   result = compute_aim(instructions)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 2 - Dive!")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "2 - Dive!" + Reset)
   part_one()
   part_two()
 }
@@ -7253,6 +7275,17 @@ import (
   "strings"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 func read_file(file_path string) []string {
   content, err := os.ReadFile(file_path)
@@ -7331,7 +7364,7 @@ func part_one() {
   lines := read_file("INPUT")
   result = significants(lines)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7339,11 +7372,11 @@ func part_two() {
   start := time.Now()
   result = oxygen(read_file("INPUT")) * co2(read_file("INPUT"))
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 3 - Binary Diagnostic")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "3 - Binary Diagnostic" + Reset)
   part_one()
   part_two()
 }
@@ -7366,6 +7399,17 @@ import (
   "strings"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 type Box struct {
   value int
@@ -7472,7 +7516,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7488,11 +7532,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 4 - Giant Squid")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "4 - Giant Squid" + Reset)
   part_one()
   part_two()
 }
@@ -7516,6 +7560,17 @@ import (
   "strconv"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 type Line struct {
   start [2]int
@@ -7591,7 +7646,7 @@ func part_one() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7608,11 +7663,11 @@ func part_two() {
     }
   }
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 5 - Hydrothermal Venture")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "5 - Hydrothermal Venture" + Reset)
   part_one()
   part_two()
 }
@@ -7635,6 +7690,17 @@ import (
   "strconv"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 func read_file(file_path string) [9]int {
   content, err := os.ReadFile(file_path)
@@ -7673,7 +7739,7 @@ func part_one() {
   lanternfish := read_file("INPUT")
   result = simulate_life(lanternfish, 80)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7682,11 +7748,11 @@ func part_two() {
   lanternfish := read_file("INPUT")
   result = simulate_life(lanternfish, 256)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 6 - Lanternfish")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "6 - Lanternfish" + Reset)
   part_one()
   part_two()
 }
@@ -7711,6 +7777,17 @@ import (
   "strconv"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 func read_file(file_path string) []int {
   content, err := os.ReadFile(file_path)
@@ -7749,7 +7826,7 @@ func part_one() {
   dist := func(x, y int) int { return int(math.Abs(float64(x - y))) }
   result = optimize_distance(horizontal_positions, dist)
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7762,11 +7839,11 @@ func part_two() {
   }
   result = optimize_distance(horizontal_positions, scaled_dist)
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 7 - The Treachery of Whales")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "7 - The Treachery of Whales" + Reset)
   part_one()
   part_two()
 }
@@ -7789,6 +7866,17 @@ import (
   "strings"
   "time"
 )
+
+const (
+  Blue   = "\033[1;34m"
+  Yellow = "\033[1;33m"
+  Green  = "\033[1;32m"
+  Reset  = "\033[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
 
 func read_file(file_path string) []string {
   content, err := os.ReadFile(file_path)
@@ -7853,7 +7941,7 @@ func part_one() {
     result += val
   }
   end := time.Now()
-  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 1, result)
 }
 
 func part_two() {
@@ -7870,11 +7958,11 @@ func part_two() {
   sort.Ints(scores)
   result = scores[len(scores)/2]
   end := time.Now()
-  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+  print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year 2021 day 10 - Syntax Scoring")
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "10 - Syntax Scoring" + Reset)
   part_one()
   part_two()
 }
