--- a/aoc/2024-16.html
+++ b/aoc/2024-16.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 16 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,40 +154,180 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-16"><a class="header" href="#advent-of-code---year-2024-day-16">Advent of code - Year 2024 Day 16</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/16">day 16</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming language</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readability of the code.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-<li><a href="2024-8.html">Day 8</a></li>
-<li><a href="2024-9.html">Day 9</a></li>
-<li><a href="2024-10.html">Day 10</a></li>
-<li><a href="2024-11.html">Day 11</a></li>
-<li><a href="2024-12.html">Day 12</a></li>
-<li><a href="2024-13.html">Day 13</a></li>
-<li><a href="2024-14.html">Day 14</a></li>
-<li><a href="2024-15.html">Day 15</a></li>
-<li><a href="2024-16.html">Day 16</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In the first part we do a <code>BFS</code> and mark visited places indexed by place and orientation and with value of their length. If we may step on the tile with smaller score do so.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we also return all visited places with the shortest path, but now we recourse on the path which has also the same score. Note that this is actually pretty slow, because we are rerunning the same suffix of each shortest path multiple times.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strings"
+  "time"
+)
+
+const (
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
+const (
+  Wall = 1
+  Space = 0
+  Max = int(^uint(0) &gt;&gt; 1)
+)
+
+func read_file(file_path string) ([][]int8, [2]int, [2]int) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  var maze [][]int8
+  var end [2]int
+  var start [2]int
+  for i, line := range strings.Split(string(content), "\n") {
+    if len(line) == 0 {
+      continue
+    }
+    row := make([]int8, len(line))
+    for j, c := range line {
+      switch c {
+        case '#':
+          row[j] = Wall
+        case '.':
+          row[j] = Space
+        case 'S':
+          start = [2]int{i, j}
+          row[j] = Space
+        case 'E':
+          end = [2]int{i, j}
+          row[j] = Space
+      }
+    }
+    maze = append(maze, row)
+  }
+  return maze, start, end
+}
+
+func extend_path(maze [][]int8, position, end, orientation [2]int, visited map[[4]int]int, score, res int) int {
+  length, ok := visited[[4]int{position[0], position[1], orientation[0], orientation[1]}]
+  if (!ok || length &gt; score) &amp;&amp; maze[position[0]][position[1]] == Space {
+    new_res := find_path(maze, position, end, orientation, visited, score)
+    if res &gt; new_res {
+      return new_res
+    }
+  }
+  return res
+}
+
+func find_path(maze [][]int8, current, end, orientation [2]int, visited map[[4]int]int, score int) int {
+  if current == end {
+    return score
+  }
+  res := Max
+  visited[[4]int{current[0], current[1], orientation[0], orientation[1]}] = score
+
+  new_pos := [2]int{current[0] + orientation[0], current[1] + orientation[1]}
+  res = extend_path(maze, new_pos, end, orientation, visited, score + 1, res)
+
+  new_orientation := [2]int{-orientation[1], orientation[0]}
+  new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
+  res = extend_path(maze, new_pos, end, new_orientation, visited, score + 1001, res)
+
+  new_orientation = [2]int{orientation[1], -orientation[0]}
+  new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
+  res = extend_path(maze, new_pos, end, new_orientation, visited, score + 1001, res)
+
+  return res
+}
+
+func extend_seats(maze [][]int8, position, end, orientation [2]int, visited map[[4]int]int, score, res int, spots [][2]int) (int, [][2]int) {
+  length, ok := visited[[4]int{position[0], position[1], orientation[0], orientation[1]}]
+  if (!ok || length &gt;= score) &amp;&amp; maze[position[0]][position[1]] == Space {
+    new_res, new_spots := find_seats(maze, position, end, orientation, visited, score)
+    if res &gt; new_res {
+      res = new_res
+      spots = new_spots
+    } else if res == new_res {
+      spots = append(spots, new_spots[:]...)
+    }
+  }
+  return res, spots
+}
+
+func find_seats(maze [][]int8, current, end, orientation [2]int, visited map[[4]int]int, score int) (int, [][2]int) {
+  if current == end {
+    return score, [][2]int{end}
+  }
+  res := Max
+  var seats [][2]int
+  visited[[4]int{current[0], current[1], orientation[0], orientation[1]}] = score
+
+  new_pos := [2]int{current[0] + orientation[0], current[1] + orientation[1]}
+  res, seats = extend_seats(maze, new_pos, end, orientation, visited, score + 1, res, seats)
+
+  new_orientation := [2]int{-orientation[1], orientation[0]}
+  new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
+  res, seats = extend_seats(maze, new_pos, end, new_orientation, visited, score + 1001, res, seats)
+
+  new_orientation = [2]int{orientation[1], -orientation[0]}
+  new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
+  res, seats = extend_seats(maze, new_pos, end, new_orientation, visited, score + 1001, res, seats)
+
+  return res, append(seats, current)
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  maze, start_point, end_point := read_file("INPUT")
+  result = find_path(maze, start_point, end_point, [2]int{0,1}, make(map[[4]int]int), 0)
+  end := time.Now()
+  print_result(end.Sub(start), 1, result)
+}
+
+func part_two() {
+  var result int
+  start := time.Now()
+  maze, start_point, end_point := read_file("INPUT")
+  _, spots := find_seats(maze, start_point, end_point, [2]int{0,1}, make(map[[4]int]int), 0)
+  seats := make(map[[2]int]bool)
+  for _, s := range spots {
+    seats[s] = true
+  }
+  result = len(seats)
+  end := time.Now()
+  print_result(end.Sub(start), 2, result)
+}
+
+func main() {
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "16 - Claw Contraption" + Reset)
+  part_one()
+  part_two()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-15.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -197,11 +337,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-15.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
